--- a/client/management/shops/edit/managers/managers.html
+++ b/client/management/shops/edit/managers/managers.html
@@ -1,7 +1,5 @@
 <template name="managementShopsEditManagers">
     <div class="managers">
-        <div class="container">
-            <legend>Managers</legend>
-        </div>
+        Managers
     </div>
 </template>
