--- a/client/management/shops/edit/orders/orders.html
+++ b/client/management/shops/edit/orders/orders.html
@@ -1,7 +1,5 @@
 <template name="managementShopsEditOrders">
     <div class="orders">
-        <div class="container">
-            <legend>Orders</legend>
-        </div>
+        Orders
     </div>
 </template>
