--- a/client/management/products/edit/inventory_management/inventory_management.html
+++ b/client/management/products/edit/inventory_management/inventory_management.html
@@ -1,5 +1,5 @@
 <template name="managementProductsEditInventoryManagement">
     <div class="inventoryManagement">
-        <legend>Inventory management</legend>
+        Inventory management
     </div>
 </template>
