--- a/client/management/products/edit/remove/remove.html
+++ b/client/management/products/edit/remove/remove.html
@@ -1,5 +1,6 @@
 <template name="managementProductsEditRemove">
     <div class="remove">
+        <p class="text-danger">This option removes a product</p>
         <button class="removeBtn btn btn-danger">Remove</button>
     </div>
 </template>
