--- a/client/management/products/edit/reviews/reviews.html
+++ b/client/management/products/edit/reviews/reviews.html
@@ -1,7 +1,5 @@
 <template name="managementProductsEditReviews">
     <div class="reviews">
-        <div class="container">
-            <legend>Reviews</legend>
-        </div>
+        Reviews
     </div>
 </template>
