--- a/client/management/shops/edit/remove/remove.html
+++ b/client/management/shops/edit/remove/remove.html
@@ -1,5 +1,6 @@
 <template name="managementShopsEditRemove">
     <div class="remove">
+        <p class="text-danger">This option removes a shop</p>
         <button class="removeBtn btn btn-danger">Remove</button>
     </div>
 </template>
