--- a/client/menu/login/login.html
+++ b/client/menu/login/login.html
@@ -1,3 +1,19 @@
 <template name="login">
     {{> loginButtons}}
+
+
+    <div class="login">
+        <form>
+            <div class="form-group">
+                <label for="loginEmail">Email</label>
+                <input type="email" class="form-control" name="email" id="loginEmail" />
+            </div>
+            <div class="form-group">
+                <label for="loginPassword">Password</label>
+                <input type="password" class="form-control" name="password" id="loginPassword" />
+            </div>
+            <button type="submit" class="btn btn-default btn-block">Submit</button>
+        </form>
+        <button type="button" class="loginFacebookBtn btn btn-default btn-block">FB</button>
+    </div>
 </template>
