--- a/client/menu/login/login.html
+++ b/client/menu/login/login.html
@@ -6,11 +6,11 @@
         <form>
             <div class="form-group">
                 <label for="loginEmail">Email</label>
-                <input type="email" class="form-control" name="email" id="loginEmail" />
+                <input type="email" class="form-control" name="email" id="loginEmail" required />
             </div>
             <div class="form-group">
                 <label for="loginPassword">Password</label>
-                <input type="password" class="form-control" name="password" id="loginPassword" />
+                <input type="password" class="form-control" name="password" id="loginPassword" required />
             </div>
             <button type="submit" class="btn btn-default btn-block">Submit</button>
         </form>
