--- a/client/marketplace/marketplace.html
+++ b/client/marketplace/marketplace.html
@@ -1,5 +1,34 @@
 <template name="marketplace">
     <div class="marketplace">
         <h1>Marketplace</h1>
+        <div class="container">
+            <div class="row">
+            {{ #each products }}
+                <div class="col-xs-6 col-sm-4">
+                    <a class="product-card" href="{{pathFor route='products.edit' data=this }}">
+                        {{ #if image }}
+                        <img src="{{ image.url }}" />
+                        {{ /if }}
+                        <div class="info">
+                            <h3>
+                                {{ #if title }}
+                                    {{title}}
+                                {{ else }}
+                                    <i>Draft product</i>
+                                {{ /if }}
+                            </h3>
+                            <span class="price">
+                                {{ #if price }}
+                                    {{price}}
+                                {{ else }}
+                                    <i>No price specified</i>
+                                {{ /if }}
+                            </span>
+                        </div>
+                    </a>
+                </div>
+            {{ /each }}
+            </div>
+        </div>
     </div>
 </template>
