--- a/client/profile/details/details.html
+++ b/client/profile/details/details.html
@@ -2,7 +2,7 @@
     <div class="details">
         <div class="container">
             <h2 class="page-header">Details</h2>
-            profileDetails
+            {{> profileDetailsBasicInfo}}
         </div>
     </div>
 </template>
