--- a/client/profile/details/details.html
+++ b/client/profile/details/details.html
@@ -2,7 +2,10 @@
     <div class="details">
         <div class="container">
             <h2 class="page-header">Details</h2>
+            {{ #with currentUser }}
             {{> profileDetailsBasicInfo}}
+            {{> profileDetailsEmails}}
+            {{ /with }}
         </div>
     </div>
 </template>
