--- a/client/management/shops/edit/edit.html
+++ b/client/management/shops/edit/edit.html
@@ -7,7 +7,7 @@
         </div>
         <div class="block">
             <div class="container">
-                <h2 class="page-header">Details</h2>
+                <h2 class="page-header">{{_ "management.shop.edit.details.header"}}</h2>
                 {{> managementShopsEditGeneral }}
                 {{> managementShopsEditVisibility }}
             </div>
