--- a/client/management/shops/edit/edit.html
+++ b/client/management/shops/edit/edit.html
@@ -14,7 +14,7 @@
         </div>
         <div class="block">
             <div class="container">
-                <h2 class="page-header">Payout settings</h2>
+                <h2 class="page-header">{{_ "management.shop.edit.payout.header"}}</h2>
                 {{> managementShopsEditPayout }}
             </div>
         </div>
@@ -23,37 +23,37 @@
         </div>
         <div class="block">
             <div class="container">
-                <h2 class="page-header">Orders</h2>
+                <h2 class="page-header">{{_ "management.shop.edit.orders.header"}}</h2>
                 {{> managementShopsEditOrders }}
             </div>
         </div>
         <div class="block">
             <div class="container">
-                <h2 class="page-header">Destinations</h2>
+                <h2 class="page-header">{{_ "management.shop.edit.platforms.header"}}</h2>
                 {{> managementShopsEditDestinations }}
             </div>
         </div>
         <div class="block">
             <div class="container">
-                <h2 class="page-header">Managers</h2>
+                <h2 class="page-header">{{_ "management.shop.edit.managers.header"}}</h2>
                 {{> managementShopsEditManagers }}
             </div>
         </div>
         <div class="block">
             <div class="container">
-                <h2 class="page-header">Reviews</h2>
+                <h2 class="page-header">{{_ "management.shop.edit.reviews.header"}}</h2>
                 {{> managementShopsEditReviews }}
             </div>
         </div>
         <div class="block">
             <div class="container">
-                <h2 class="page-header">Additional</h2>
+                <h2 class="page-header">{{_ "management.shop.edit.etc.header"}}</h2>
                 {{> managementShopsEditTracking }}
             </div>
         </div>
         <div class="block">
             <div class="container">
-                <h2 class="page-header text-danger">Remove</h2>
+                <h2 class="page-header text-danger">{{_ "management.shop.edit.remove.header"}}</h2>
                 {{> managementShopsEditRemove }}
             </div>
         </div>
