--- a/client/management/shops/edit/payout/payout.html
+++ b/client/management/shops/edit/payout/payout.html
@@ -1,15 +1,15 @@
-<template name="managementShopsEditPayout">
-    <div class="payout">
-        <legend>PayPal account</legend>
+<template name="managementShopsEditPayPal">
+    <div class="paypal">
+        <legend>{{_ "management.shop.edit.paypal.header"}}</legend>
         {{ #if payPal.account }}
 
             {{ #with payPal.account }}
                 {{type}}
 
                 {{ #if verified }}
-                    <span class="label label-success">Verified</span>
+                    <span class="label label-success">{{_ "management.shop.edit.paypal.verified.yes"}}</span>
                 {{ else }}
-                    <span class="label label-danger">Not verified</span>
+                    <span class="label label-danger">{{_ "management.shop.edit.paypal.verified.no"}}</span>
                 {{ /if }}
 
                 <address>
@@ -25,17 +25,17 @@
                 </address>
             {{ /with }}
 
-            <button class="attachPayPalAccountBtn btn btn-default btn-xs" data-generating-text="Generating request token..." data-redirecting-text="Redirecting to PayPal...">
-                Change PayPal account
+            <button class="attachPayPalAccountBtn btn btn-default btn-xs" data-generating-text="{{_ "management.shop.edit.paypal.change.generating"}}" data-redirecting-text="{{_ "management.shop.edit.paypal.change.redirecting"}}">
+                {{_ "management.shop.edit.paypal.change.label"}}
             </button>
 
         {{ else }}
 
             <p class="help-block">
-                We would need couple permissions to make it all work: refunds and your basic info.
+                {{_ "management.shop.edit.paypal.help"}}
             </p>
-            <button class="attachPayPalAccountBtn btn btn-primary btn-block" data-generating-text="Generating request token..." data-redirecting-text="Redirecting to PayPal...">
-                Attach PayPal account
+            <button class="attachPayPalAccountBtn btn btn-primary btn-block" data-generating-text="{{_ "management.shop.edit.paypal.attach.generating"}}" data-redirecting-text="{{_ "management.shop.edit.paypal.attach.redirecting"}}">
+                {{_ "management.shop.edit.paypal.attach.label"}}
             </button>
 
         {{ /if }}
