--- a/client/management/shops/edit/destinations/destinations.html
+++ b/client/management/shops/edit/destinations/destinations.html
@@ -1,5 +1,5 @@
 <template name="managementShopsEditDestinations">
     <div class="destinations">
-        Destinations
+        Platforms
     </div>
 </template>
