--- a/client/management/products/edit/edit.html
+++ b/client/management/products/edit/edit.html
@@ -8,26 +8,26 @@
         {{> managementProductsEditImages }}
         <div class="block">
             <div class="container">
-                <h2 class="page-header">Details</h2>
+                <h2 class="page-header">{{_ "management.product.edit.details.header"}}</h2>
                 {{> managementProductsEditGeneral }}
                 {{> managementProductsEditVisibility }}
             </div>
         </div>
         <div class="block">
             <div class="container">
-                <h2 class="page-header">Inventory management</h2>
+                <h2 class="page-header">{{_ "management.product.edit.inventoryManagement.header"}}</h2>
                 {{> managementProductsEditInventoryManagement }}
             </div>
         </div>
         <div class="block">
             <div class="container">
-                <h2 class="page-header">Reviews</h2>
+                <h2 class="page-header">{{_ "management.product.edit.reviews.header"}}</h2>
                 {{> managementProductsEditReviews }}
             </div>
         </div>
         <div class="block">
             <div class="container">
-                <h2 class="page-header text-danger">Remove</h2>
+                <h2 class="page-header text-danger">{{_ "management.product.edit.remove.header"}}</h2>
                 {{> managementProductsEditRemove }}
             </div>
         </div>
