--- a/client/management/products/edit/remove/remove.html
+++ b/client/management/products/edit/remove/remove.html
@@ -1,6 +1,6 @@
 <template name="managementProductsEditRemove">
     <div class="remove">
-        <p class="text-danger">This option removes a product</p>
-        <button class="removeBtn btn btn-danger">Remove</button>
+        <p class="text-danger">{{_ "management.product.edit.remove.help"}}</p>
+        <button class="removeBtn btn btn-danger">{{_ "management.product.edit.remove.removeBtn.label"}}</button>
     </div>
 </template>
