--- a/client/profile/profile.html
+++ b/client/profile/profile.html
@@ -1,5 +1,5 @@
 <template name="profile">
-    <div class="profile">
+    <div class="profile-view">
         {{> profileDetails}}
         {{> profileAccounts}}
         {{> profileReviews}}
