--- a/client/management/shops/edit/products/products.html
+++ b/client/management/shops/edit/products/products.html
@@ -24,7 +24,7 @@
                             </h3>
                             <span class="price">
                                 {{ #if price }}
-                                    {{price}}
+                                    {{currency price}}
                                 {{ else }}
                                     <i>{{_ "management.shop.edit.products.price.none"}}</i>
                                 {{ /if }}
