--- a/client/marketplace/marketplace.html
+++ b/client/marketplace/marketplace.html
@@ -18,7 +18,7 @@
                             </h3>
                             <span class="price">
                                 {{ #if price }}
-                                    {{price}}
+                                    {{currency price}}
                                 {{ else }}
                                     <i>No price specified</i>
                                 {{ /if }}
