--- a/client/main.html
+++ b/client/main.html
@@ -11,6 +11,7 @@
         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
         ga('create', 'UA-57139532-2', 'auto');
+        ga('require', 'ecommerce');
     </script>
 </head>
 
