--- a/client/dialogs/auth.html
+++ b/client/dialogs/auth.html
@@ -6,6 +6,14 @@
                     <h4 class="modal-title">Authorization</h4>
                 </div>
                 <div class="modal-body">
+                    <button class="btn btn-facebook btn-block facebookBtn">Sign in with Facebook</button>
+                    <button class="btn btn-google btn-block googleBtn">Sign in with Google+</button>
+                    <button class="btn btn-twitter btn-block twitterBtn">Sign in with Twitter</button>
+                    <div class="divider">
+                        <h6>
+                            or
+                        </h6>
+                    </div>
                     <form class="form-horizontal" role="form">
                         <div class="form-group">
                             <label for="emailInput" class="col-sm-2 control-label">Email</label>
@@ -21,12 +29,6 @@
                         </div>
                         <button type="submit" class="btn btn-block btn-primary">Sign in</button>
                     </form>
-                    <div class="divider">
-                        <h6>
-                            or
-                        </h6>
-                    </div>
-                    <button class="btn btn-facebook btn-block facebookBtn">Sign in with Facebook</button>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
