--- a/client/profile/accounts/accounts.html
+++ b/client/profile/accounts/accounts.html
@@ -2,7 +2,9 @@
     <div class="accounts">
         <div class="container">
             <h2 class="page-header">Social accounts</h2>
-            profileAccounts
+            {{> profileAccountsFacebook}}
+            {{> profileAccountsGoogle}}
+            {{> profileAccountsTwitter}}
         </div>
     </div>
 </template>
