--- a/client/profile/accounts/google/google.html
+++ b/client/profile/accounts/google/google.html
@@ -1,6 +1,8 @@
 <template name="profileAccountsGoogle">
     <div class="google">
         <legend>Google</legend>
-        
+        <button class="btn btn-google btn-block">
+            Attach
+        </button>
     </div>
 </template>
