--- a/client/profile/accounts/facebook/facebook.html
+++ b/client/profile/accounts/facebook/facebook.html
@@ -1,6 +1,8 @@
 <template name="profileAccountsFacebook">
     <div class="facebook">
         <legend>Facebook</legend>
-
+        <button class="btn btn-facebook btn-block attachBtn">
+            Attach
+        </button>
     </div>
 </template>
