--- a/client/profile/accounts/twitter/twitter.html
+++ b/client/profile/accounts/twitter/twitter.html
@@ -1,6 +1,8 @@
 <template name="profileAccountsTwitter">
     <div class="twitter">
         <legend>Twitter</legend>
-
+        <button class="btn btn-twitter btn-block">
+            Attach
+        </button>
     </div>
 </template>
